Fix to remove rogue bootstrap margin on smaller devices to correct margin issue.

--- a/themes/suiteresponsive/css/style.css
+++ b/themes/suiteresponsive/css/style.css
@@ -4833,6 +4833,11 @@ li#moremenu {
     .dashboardTabList{
         display:none;
     }
+    /* Fix to remove rogue bootstrap margin on smaller devices to correct margin issue */
+    #bootstrap-container,.col-sm-9, .col-sm-offset-3, .col-md-10, .col-md-offset-2, .main {
+        margin:0;
+        padding:0;
+    }
 }
 
 /* End Global CSS */
